correct a layout problems

--- a/gisgraphy/src/main/webapp/styles/ui/theme.css
+++ b/gisgraphy/src/main/webapp/styles/ui/theme.css
@@ -584,7 +584,7 @@ margin : 5px;
 
 .googlemapInfoWindowHtml {
 width: 250px; 
-height: 150px;
+height: 190px;
 text-align:center;background:white url(images/background.gif) repeat-x scroll left top;
 color:#444444;
 font-family:verdana,arial,helvetica,sans-serif;
